tests/paczka1/small_fuzzy/96105859.err
Error in line 2: 9HX3 S231 13,3
Error in line 3: ZKsY A567 72,8
